# dc_lab

./: .gitignore
brutalist/: CMakeLists.txt  main.cpp
brutto/: CMakeLists.txt  main.cpp
